# COS_Senior_Project

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  FULL_DESCRIPTION.txt  INSTALL_PYTHON.md  INTERACTIVE_FEATURES.md  Midterm_Presentation.pptx  Midterm_Report.docx  Progress Report 10.docx  Progress Report 7.docx  Python_to_Cpp_Conversion_Summary.txt  QUICKSTART.md  README.md  Weekly Report 5.docx  Weekly Report 6.docx  Weekly Report 7.docx  Weekly Report 9.docx  build.bat  requirements.txt  run.bat  schema.sql  test_export.json
data_store/: index_date_field.json  index_invoice_number.json  report.html  search_history.json  store.json
docs/: CPP_BUILD.md  architecture.md
include/document_ingestion/: avl_tree.hpp  config.hpp  database.hpp  ingestion_service.hpp  keyword_search_service.hpp  logger.hpp  logs_repo.hpp  models.hpp  normalizer.hpp  parsers.hpp  parsers_internal.hpp  registry.hpp  report_service.hpp  rule_engine.hpp  rules_models.hpp  rules_repo.hpp  scanner.hpp  search_history.hpp  store.hpp  validator.hpp
sample_docs/: .gitkeep  sample.docx  sample.txt  sample.xlsx
scripts/: create_sample_files.py
src/: __init__.py  config.cpp  config.py  main.cpp  main.py
src/db/: database.cpp  database.py  documents_repo.py  extractions_repo.py  logs_repo.cpp  logs_repo.py  rules_repo.cpp  rules_repo.py
src/gui/: app.manifest  win32_app.cpp
src/logging/: logger.cpp  logger.py
src/parsers/: __init__.py  base.py  docx_parser.cpp  docx_parser.py  factory.cpp  factory.py  pdf_parser.cpp  pdf_parser.py  txt_parser.cpp  txt_parser.py  xlsx_parser.cpp  xlsx_parser.py
src/rules/: __init__.py  engine.cpp  engine.py  models.cpp  models.py  repository.py
src/scanner/: __init__.py  registry.cpp  registry.py  scanner.cpp  scanner.py
src/services/: export_service.py  ingestion_service.cpp  ingestion_service.py  keyword_search_service.cpp  keyword_search_service.py  report_service.cpp  report_service.py
src/spikes/: __init__.py  spike_docx.py  spike_pdf.py  spike_regex.py  spike_xlsx.py
src/store/: __init__.py  avl_tree.cpp  avl_tree.py  models.cpp  models.py  search_history.cpp  search_history.py  store.cpp  store.py
src/ui/: __init__.py  api.py  routes_documents.py  routes_logs.py  routes_results.py  routes_rules.py  routes_scan.py
src/ui/templates/: index.html  logs.html  results.html  rules.html
src/validation/: normalizer.cpp  normalizer.py  validator.cpp  validator.py
tests/: test_avl.py  test_avl_tree.cpp  test_db.py  test_ingestion_with_store.py  test_integration.cpp  test_pipeline.cpp  test_pipeline.py  test_rule_engine.cpp  test_rules.py  test_store.py  test_validation.py
